<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAccent"
    tools:context="com.example.mespada.logueo_calculo_imc.LoginActivity">

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edtPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:textColor="@color/colorDark"
        android:id="@+id/txtPassword" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:hint="@string/nomusu"
        android:layout_marginRight="5dp"
        android:layout_marginTop="42dp"
        android:id="@+id/edtUsuario"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/pass"
        android:layout_marginRight="5dp"
        android:layout_marginTop="42dp"
        android:id="@+id/edtPassword"
        android:layout_below="@+id/edtUsuario"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="18sp"
        android:textColor="@color/colorDark"
        android:id="@+id/txtUsuario"
        android:layout_alignTop="@+id/edtUsuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPassword"
        android:layout_alignLeft="@+id/edtPassword"
        android:layout_alignStart="@+id/edtPassword"
        android:layout_marginTop="71dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/colorDark"
        android:textColor="@color/white"
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@+id/btnLogin" />

    <Button
        android:text="@string/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin"
        android:layout_marginTop="57dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:background="@color/colorDark"
        android:textColor="@color/white"
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@+id/btnRegistro" />

</RelativeLayout>
