<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mespada.logueo_calculo_imc.MainActivity"
    android:background="@color/colorAccent">

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView"
        android:text="@string/weight"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/txtPeso"
        android:layout_centerVertical="false"
        tools:textColor="@color/colorAccent" />

    <TextView android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/textView"
        android:text="@string/height"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorDark" />

    <Button android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btn_calculo"
        android:text="@string/calcula_imc"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/btn_tablavalores"
        android:layout_centerHorizontal="true"
        android:background="@color/colorDark"
        android:textColor="@color/white" />

    <EditText android:layout_height="40dp"
        android:layout_width="120dp"
        android:id="@+id/txtPeso"
        android:layout_marginTop="112dp"
        android:text=""
        android:visibility="visible"
        android:textSize="24sp"
        android:background="@android:color/white"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="15dp"/>

    <EditText android:layout_height="40dp"
        android:layout_width="120dp"
        android:id="@+id/txtAltura"
        android:visibility="visible"
        android:textSize="24sp"
        android:background="@android:color/white"
        android:textAlignment="center"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="15dp"/>

    <TextView
        android:text="@string/mensaje_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtMensajeBienvenida"
        android:layout_centerHorizontal="true"
        tools:textColor="@color/colorAccent"
        tools:textSize="24sp"
        android:layout_centerVertical="false"
        tools:textAlignment="center" />

    <Button
        android:text="@string/gototabla_valores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_tablavalores"
        android:layout_marginBottom="69dp"
        android:background="@color/colorDark"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />
</RelativeLayout>
